# miscada-group-12

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  gs.cpp  gs.h  requirements.txt  run.sh  simulation imaging.ipynb  test.cpp
.github/workflows/: build-test.yaml  docker.yaml
data/: output_0.vtk  output_100.vtk  output_1000.vtk  output_1100.vtk  output_1200.vtk  output_1300.vtk  output_1400.vtk  output_1500.vtk  output_1600.vtk  output_1700.vtk  output_1800.vtk  output_1900.vtk  output_200.vtk  output_2000.vtk  output_2100.vtk  output_2200.vtk  output_2300.vtk  output_2400.vtk  output_2500.vtk  output_2600.vtk  output_2700.vtk  output_2800.vtk  output_2900.vtk  output_300.vtk  output_3000.vtk  output_3100.vtk  output_3200.vtk  output_3300.vtk  output_3400.vtk  output_3500.vtk  output_3600.vtk  output_3700.vtk  output_3800.vtk  output_3900.vtk  output_400.vtk  output_4000.vtk  output_4100.vtk  output_4200.vtk  output_4300.vtk  output_4400.vtk  (+60 more)
simulation/: simulation.py
src/: CMakeLists.txt  main.cpp
src/gs/: CMakeLists.txt  gs.cpp
src/gs/include/gs/: gs.h
tests/: CMakeLists.txt  gs_test.cpp
